--- a/src/layouts/ResponsiveContainerColumn/index.css
+++ b/src/layouts/ResponsiveContainerColumn/index.css
@@ -1,3 +1,12 @@
 .container {
   background-color: #efefef;
 }
+
+.responsiveContainerColumn-layout {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+}
+
+.responsiveContainerColumn-layout__column {
+}
